Fix logo disappearing on firefox >:(

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -12,13 +12,11 @@
 
   .site-logo {
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100%;
     padding: 0.5rem 0;
 
     img {
-      width: 100%;
       height: 100%;
       object-position: left;
     }
